commit #2 search section

--- a/index.html
+++ b/index.html
@@ -41,6 +41,45 @@
           </div>
         </a>
       </div>
+      <i id="expand" class="material-icons">expand_more</i>
     </header>
+    <section class="main">
+      <div class="wrapper">
+        <div class="left"><img src="assets/img/eiffel-tower.jpg" alt="" /></div>
+        <div class="right">
+          <h1 class="heading">
+            Why you <span class="accent-color">Choose Us?</span>
+          </h1>
+          <p class="para">
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+            Dignissimos adipisci assumenda ipsum praesentium itaque, eos
+            deleniti delectus veniam modi quod quos ex illum fugiat suscipit,.
+          </p>
+          <p class="para">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius,
+            perspiciatis.
+          </p>
+        </div>
+      </div>
+    </section>
+    <section class="location">
+      <div class="wrapper">
+        <div class="left">
+          <h1 class="heading">
+            Search the most popular
+            <span class="accent-color-sec">destinations</span>
+          </h1>
+          <p class="para">
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Qui magnam
+            expedita cumque facilis, delectus ex illo quo eligendi dolore! Quas.
+          </p>
+          <div class="input">
+            <span><i class="material-icons">search</i></span>
+            <input id="search" type="text" />
+          </div>
+        </div>
+        <div class="right"><h1>Search</h1></div>
+      </div>
+    </section>
   </body>
 </html>
