commit #3 destination grid

--- a/index.html
+++ b/index.html
@@ -73,13 +73,69 @@
             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Qui magnam
             expedita cumque facilis, delectus ex illo quo eligendi dolore! Quas.
           </p>
+        </div>
+        <div class="right"><h1>Search</h1></div>
+      </div>
+    </section>
+    <section class="city">
+      <div class="wrapper">
+        <div class="search">
           <div class="input">
             <span><i class="material-icons">search</i></span>
             <input id="search" type="text" />
           </div>
         </div>
-        <div class="right"><h1>Search</h1></div>
+        <div class="city-list">
+          <ul>
+            <li><a href="#">Bangkok</a></li>
+            <li><a href="#">London</a></li>
+            <li><a href="#">Paris</a></li>
+          </ul>
+          <ul>
+            <li><a href="#">Tokyo</a></li>
+            <li><a href="#">Milan</a></li>
+            <li><a href="#">Bali</a></li>
+          </ul>
+          <ul>
+            <li><a href="#">Dubai</a></li>
+            <li><a href="#">Singapore</a></li>
+            <li><a href="#">New York</a></li>
+          </ul>
+        </div>
       </div>
     </section>
+    <section class="destination">
+      <div class="wrapper">
+        <a href="#" class="dest">
+          <img src="assets/img/beach-1.jpg" alt="" />
+          <div class="text">
+            <p>Phillipines Beach</p>
+            <span>Lorem, ipsum dolor.</span>
+          </div>
+        </a>
+        <a href="#" class="dest">
+          <img src="assets/img/city.jpg" alt="" />
+          <div class="text">
+            <p>Bangkok City</p>
+            <span>Lorem, ipsum dolor.</span>
+          </div>
+        </a>
+        <a href="#" class="dest">
+          <img src="assets/img/beach-2.jpg" alt="" />
+          <div class="text">
+            <p>Singapore Beach</p>
+            <span>Lorem, ipsum dolor.</span>
+          </div>
+        </a>
+        <a href="#" class="dest">
+          <img src="assets/img/hotel.jpg" alt="" />
+          <div class="text">
+            <p>Bangkok Hotel</p>
+            <span>Lorem, ipsum dolor.</span>
+          </div>
+        </a>
+      </div>
+    </section>
+    <div style="height:400px;background-color:#ccc;"></div>
   </body>
 </html>
