commit #4 stat section add

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
           </ul>
           <ul>
             <li><a href="#">Tokyo</a></li>
-            <li><a href="#">Milan</a></li>
+            <li><a href="#">Japan</a></li>
             <li><a href="#">Bali</a></li>
           </ul>
           <ul>
@@ -112,6 +112,7 @@
             <p>Phillipines Beach</p>
             <span>Lorem, ipsum dolor.</span>
           </div>
+          <div class="overlay"></div>
         </a>
         <a href="#" class="dest">
           <img src="assets/img/city.jpg" alt="" />
@@ -119,6 +120,7 @@
             <p>Bangkok City</p>
             <span>Lorem, ipsum dolor.</span>
           </div>
+          <div class="overlay"></div>
         </a>
         <a href="#" class="dest">
           <img src="assets/img/beach-2.jpg" alt="" />
@@ -126,6 +128,7 @@
             <p>Singapore Beach</p>
             <span>Lorem, ipsum dolor.</span>
           </div>
+          <div class="overlay"></div>
         </a>
         <a href="#" class="dest">
           <img src="assets/img/hotel.jpg" alt="" />
@@ -133,9 +136,48 @@
             <p>Bangkok Hotel</p>
             <span>Lorem, ipsum dolor.</span>
           </div>
+          <div class="overlay"></div>
         </a>
       </div>
     </section>
-    <div style="height:400px;background-color:#ccc;"></div>
+    <section class="main">
+      <div class="wrapper">
+        <div class="right">
+          <h1 class="heading">
+            Travel with our <span class="accent-color">Agency</span>
+          </h1>
+          <p class="para">
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+            Dignissimos adipisci assumenda ipsum praesentium itaque, eos
+            deleniti delectus veniam modi quod quos ex illum fugiat suscipit,.
+          </p>
+          <p class="para">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius,
+            perspiciatis.
+          </p>
+        </div>
+        <div class="left"><img src="assets/img/statue.jpg" alt="" /></div>
+      </div>
+    </section>
+    <section class="stat">
+      <div class="wrapper">
+        <h1 class="heading">Our Success</h1>
+        <p class="para">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus,
+          numquam?
+        </p>
+        <div class="count">
+          <div class="flex">
+            <h1>345 million</h1>
+            <p class="para">users traveled by us</p>
+          </div>
+          <div class="flex">
+            <h1>6738 guides</h1>
+            <p class="para">we have for the service</p>
+          </div>
+        </div>
+      </div>
+    </section>
+    <div style="height:400px;"></div>
   </body>
 </html>
