commit #5 sub section & testimonial section

--- a/index.html
+++ b/index.html
@@ -172,10 +172,38 @@
             <p class="para">users traveled by us</p>
           </div>
           <div class="flex">
-            <h1>6738 guides</h1>
+            <h1>6778 guides</h1>
             <p class="para">we have for the service</p>
           </div>
         </div>
+      </div>
+    </section>
+    <section class="testimonial">
+      <div class="wrapper">
+        <div class="testimonial-single">
+          <span class="head">&quot;</span>
+          <p class="lead">The best travel agency I have ever tried</p>
+          <p class="para">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad corporis
+            nam, quam debitis, doloremque, deleniti officia perspiciatis animi
+            ipsa quidem ullam? Cum suscipit optio dolor recusandae, autem, sunt
+            placeat amet tempore repellat neque eaque error iste praesentium
+            voluptatibus! Iste, animi?
+          </p>
+          <div class="user">
+            <img src="assets/img/face.jpg" alt="" />
+            <span class="name">John Doe</span>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="cta">
+      <div class="wrapper">
+        <span
+          >Get latest offer &amp; special discount joining our mailing
+          list.</span
+        >
+        <a href="#" class="cta-btn">Start Your Journey</a>
       </div>
     </section>
     <div style="height:400px;"></div>
