--- a/index.html
+++ b/index.html
@@ -206,6 +206,48 @@
         <a href="#" class="cta-btn">Start Your Journey</a>
       </div>
     </section>
-    <div style="height:400px;"></div>
+    <footer>
+      <div class="wrapper">
+        <div class="ft-flex-item">
+          <h3>About Us</h3>
+          <ul>
+            <li><a href="#">Loremipsum</a></li>
+            <li><a href="#">Ipsumdolor</a></li>
+            <li><a href="#">Dolorlorem</a></li>
+            <li><a href="#">Consectetur</a></li>
+          </ul>
+        </div>
+        <div class="ft-flex-item">
+          <h3>Process</h3>
+          <ul>
+            <li><a href="#">Loremipsum</a></li>
+            <li><a href="#">Ipsumdolor</a></li>
+            <li><a href="#">Dolorlorem</a></li>
+            <li><a href="#">Consectetur</a></li>
+            <li><a href="#">Ipsumdolor</a></li>
+          </ul>
+        </div>
+        <div class="ft-flex-item">
+          <h3>Quick Links</h3>
+          <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Who We Are</a></li>
+            <li><a href="#">How We Work</a></li>
+            <li><a href="#">Our Policy</a></li>
+          </ul>
+        </div>
+        <div class="ft-flex-item">
+          <h3>Contact Information</h3>
+          <p class="para">
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolores
+            laboriosam, dolorem consequatur.
+          </p>
+          <p><a href="#" class="accent-color">helpline@trave.com</a></p>
+        </div>
+      </div>
+      <div class="wrapper copyright">
+        <p>&copy; Trave. All Rights Reserved.</p>
+      </div>
+    </footer>
   </body>
 </html>
