#7 commit responsive@767-breakpoint

--- a/index.html
+++ b/index.html
@@ -34,14 +34,14 @@
       </div>
       <div class="video-play">
         <a href="#">
-          <i class="material-icons">play_circle_outline</i>
+          <!-- <i class="material-icons">play_circle_outline</i> -->
           <div class="wrap">
             <span>Watch</span>
             <h2>Intro Video</h2>
           </div>
         </a>
       </div>
-      <i id="expand" class="material-icons">expand_more</i>
+      <!-- <i id="expand" class="material-icons">expand_more</i> -->
     </header>
     <section class="main">
       <div class="wrapper">
