--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <!-- Main Style Sheet -->
     <link rel="stylesheet" href="assets/css/main.css" />
     <title>trave.</title>
+    <script src="assets/js/main.js" async></script>
   </head>
   <body>
     <header>
@@ -23,8 +24,13 @@
           </p>
         </div>
         <nav>
-          <a href="#">Who We Are</a> <a href="#">What We Do</a>
-          <a href="#">Travel With Us</a> <a href="#">Contact</a>
+          <ul class="nav-links">
+            <li><a href="#">Who We Are</a></li>
+            <li><a href="#">What We Do</a></li>
+            <li><a href="#">Travel With Us</a></li>
+            <li><a href="#">Contact</a></li>
+          </ul>
+          <span id="bars"><i class="material-icons">dehaze</i></span>
         </nav>
       </div>
       <div class="hero-text">
